[package]
name = "oco-lite-matchup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
indicatif = "0.17.3"
ndarray = { version = "0.15.6", features = ["serde"] }
netcdf = { version = "0.8.1", features = ["static"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
