[package]
name = "oco-lite-matchup"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "make-oco-match-config"
path = "src/bin/make_oco_match_config.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
indicatif = { version = "0.17.3", features = ["rayon"] }
itertools = "0.10.5"
log = "0.4.22"
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
netcdf = { version = "0.8.1" }
num-traits = "0.2.15"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.40"
toml = "0.7.4"

[features]
static = ["netcdf/static"]
